# SystemProgrammingLabs

./: .gitignore
Lab1/: .gitignore  CMakeLists.txt
Lab1/ChildProgram/: CMakeLists.txt  child.c  input.h  task14.c  task14.h
Lab1/ParentProgram/: CMakeLists.txt  main.c
Lab1/Report/: report1.docx  ~$eport1.docx
Lab1/Tests/: CMakeLists.txt  main.c
Lab2/: CMakeLists.txt  input.c  input.h  main.c  task11.c  task11.h  thread.c  thread.h
Lab2/Report/: report1.docx
Lab3/: CMakeLists.txt  Input.c  Input.h  IslandGroup.c  IslandGroup.h  LinkedList.c  LinkedList.h  main.c
Lab3/Report/: report1.docx
Lab4/: CMakeLists.txt  FileIO.c  FileIO.h  Input.c  Input.h  Makefile  main.c
Lab4/Report/: report1.docx
Lab4/Report/Lab4Var17/: FileIO.c  FileIO.h  Input.h  main.c
Lab5/: CMakeLists.txt  Lab5_Client  Lab5_Server  Makefile  child.c  client.c  config.h  config.h.in  config.status  configure  configure.ac  input.c  input.h  server.c  serverConsoleInterface.h  serverSocketInterface.c  socketOperations.c  socketOperations.h  task14.c  task14.h
Lab5/Report/: report1.docx
Lab5/autom4te.cache/: output.0  requests  traces.0
Lab6/: CMakeLists.txt  client.c  input.c  input.h  logOutput.c  logOutput.h  server.c  task14.h  timer.c  timer.h
Lab7/: CMakeLists.txt  ServerFunctions.c  ServerFunctions.h  client.c  config.h.in  logOutput.c  logOutput.h  server.c  serverFunctions.c  task14.h  timer.c  timer.h
Lab7/Report/: report1.docx  ~$eport1.docx
Lab8/: CMakeLists.txt  Makefile  client.c  logOutput.c  securityFunctions.c  securityFunctions.h  server.c  serverFunctions.h  timer.c  timer.h
Lab8/Report/Documents/: report1.docx
